fix: scroll jump

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* html,
+body,
+main {
+  scrollbar-gutter: stable;
+} */
+
+
+* {
+  scroll-behavior: smooth;
+}
